--- a/index.html
+++ b/index.html
@@ -68,30 +68,30 @@
             <div class="card">
                 <h2>Prayer Times</h2>
                 <p>View today's prayer schedule</p>
-                <a href="prayer-times.html" class="button">Go</a>
+                <a href="prayer-times.html" class="button">View Prayer Times</a>
             </div>
             <div class="card">
                 <h2>Events</h2>
                 <p>See upcoming events</p>
-                <a href="events.html" class="button">Go</a>
+                <a href="events.html" class="button">Explore Events</a>
             </div>
             <div class="card">
                 <h2>Donate</h2>
                 <p>Support the masjid</p>
-                <a href="donations.html" class="button">Go</a>
+                <a href="donations.html" class="button">Make a Donation</a>
             </div>
         </section>
         <section class="about-snippet">
             <h2>About Us</h2>
             <p>Bagotville Masjid has been serving the Muslim community in West Bank Demerara, Guyana since 1913. We strive to provide a welcoming environment for worship, education, and community engagement, under the leadership of our current Imam and Scholar, Yahya Mohammad.</p>
-            <a href="about.html" class="button">Read More</a>
+            <a href="about.html" class="button">Learn More About Us</a>
         </section>
         <section class="latest-news">
             <h2>Latest News</h2>
             <div class="news-item">
                 <h3>Eid Celebration</h3>
                 <p>Join us for Eid prayers and festivities on March 31, 2025.</p>
-                <a href="news.html" class="button">Read More</a>
+                <a href="news.html" class="button">Read Latest News</a>
             </div>
         </section>
     </main>
