--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'" crossorigin>
     
+    <!-- Preload hero image for LCP optimization -->
+    <link rel="preload" as="image" href="images/masjid-hero-light.webp" imagesrcset="images/masjid-hero-light.webp 1280w, images/masjid-hero-light-800.webp 800w" imagesizes="(max-width: 1280px) 100vw, 1280px" type="image/webp">
+    <link rel="preload" as="image" href="images/masjid-hero-light.jpg" imagesrcset="images/masjid-hero-light.jpg 1280w, images/masjid-hero-light-800.jpg 800w" imagesizes="(max-width: 1280px) 100vw, 1280px" type="image/jpeg">
+    <link rel="preload" as="image" href="images/masjid-hero-dark.webp" imagesrcset="images/masjid-hero-dark.webp 1280w, images/masjid-hero-dark-800.webp 800w" imagesizes="(max-width: 1280px) 100vw, 1280px" type="image/webp">
+    <link rel="preload" as="image" href="images/masjid-hero-dark.jpg" imagesrcset="images/masjid-hero-dark.jpg 1280w, images/masjid-hero-dark-800.jpg 800w" imagesizes="(max-width: 1280px) 100vw, 1280px" type="image/jpeg">
+    
     <!-- Inline Critical CSS for above-the-fold content -->
     <style>
         /* Critical CSS for hero and navigation */
@@ -60,6 +66,21 @@
             text-align: center;
             position: relative;
             overflow: hidden;
+        }
+        .hero-image {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 120%;
+            z-index: 1;
+        }
+        .hero-image img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            opacity: 0.6;
+            transition: opacity 0.3s ease;
         }
         .hero-content {
             position: relative;
@@ -127,14 +148,32 @@
         <section class="hero">
             <div class="hero-image">
                 <picture>
-                    <source srcset="images/masjid-hero-light.webp" type="image/webp" loading="lazy">
-                    <source srcset="images/masjid-hero-light.jpg" type="image/jpeg" loading="lazy">
-                    <img src="images/masjid-hero-light.jpg" alt="Bagotville Masjid Exterior (Light Theme)" class="light-theme-image" loading="lazy">
+                    <source 
+                        srcset="images/masjid-hero-light-1280.webp 1280w, images/masjid-hero-light-800.webp 800w" 
+                        sizes="(max-width: 1280px) 100vw, 1280px" 
+                        type="image/webp">
+                    <source 
+                        srcset="images/masjid-hero-light-1280.jpg 1280w, images/masjid-hero-light-800.jpg 800w" 
+                        sizes="(max-width: 1280px) 100vw, 1280px" 
+                        type="image/jpeg">
+                    <img 
+                        src="images/masjid-hero-light-1280.jpg" 
+                        alt="Bagotville Masjid Exterior (Light Theme)" 
+                        class="light-theme-image">
                 </picture>
                 <picture>
-                    <source srcset="images/masjid-hero-dark.webp" type="image/webp" loading="lazy">
-                    <source srcset="images/masjid-hero-dark.jpg" type="image/jpeg" loading="lazy">
-                    <img src="images/masjid-hero-dark.jpg" alt="Bagotville Masjid Exterior (Dark Theme)" class="dark-theme-image" loading="lazy">
+                    <source 
+                        srcset="images/masjid-hero-dark-1280.webp 1280w, images/masjid-hero-dark-800.webp 800w" 
+                        sizes="(max-width: 1280px) 100vw, 1280px" 
+                        type="image/webp">
+                    <source 
+                        srcset="images/masjid-hero-dark-1280.jpg 1280w, images/masjid-hero-dark-800.jpg 800w" 
+                        sizes="(max-width: 1280px) 100vw, 1280px" 
+                        type="image/jpeg">
+                    <img 
+                        src="images/masjid-hero-dark-1280.jpg" 
+                        alt="Bagotville Masjid Exterior (Dark Theme)" 
+                        class="dark-theme-image">
                 </picture>
             </div>
             <div class="hero-content">
