--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Open Graph Metadata -->
     <meta property="og:title" content="Bagotville Masjid - Home">
     <meta property="og:description" content="Welcome to Bagotville Masjid, serving the Muslim community in West Bank Demerara, Guyana since 1913. Learn about our prayer times, events, and community services.">
-    <meta property="og:image" content="https://bagotvillemasjid.github.io/images/masjid-hero-light-1280.webp">
+    <meta property="og:image" content="https://bagotvillemasjid.github.io/images/masjid-hero-light.webp">
     <meta property="og:url" content="https://bagotvillemasjid.github.io/index.html">
     <meta property="og:type" content="website">
     
@@ -21,7 +21,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Bagotville Masjid - Home">
     <meta name="twitter:description" content="Welcome to Bagotville Masjid, serving the Muslim community in West Bank Demerara, Guyana since 1913. Learn about our prayer times, events, and community services.">
-    <meta name="twitter:image" content="https://bagotvillemasjid.github.io/images/masjid-masjid.webp">
+    <meta name="twitter:image" content="https://bagotvillemasjid.github.io/images/masjid-hero-light.webp">
     
     <!-- Preload Google Fonts and set font-display: swap -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -150,29 +150,29 @@
             <div class="hero-image">
                 <picture>
                     <source 
-                        srcset="images/masjid-hero-light-1280.webp 1280w, images/masjid-hero-light-800.webp 800w" 
+                        srcset="images/masjid-hero-light.webp 1280w, images/masjid-hero-light-800.webp 800w" 
                         sizes="(max-width: 1280px) 100vw, 1280px" 
                         type="image/webp">
                     <source 
-                        srcset="images/masjid-hero-light-1280.jpg 1280w, images/masjid-hero-light-800.jpg 800w" 
+                        srcset="images/masjid-hero-light.jpg 1280w, images/masjid-hero-light-800.jpg 800w" 
                         sizes="(max-width: 1280px) 100vw, 1280px" 
                         type="image/jpeg">
                     <img 
-                        src="images/masjid-hero-light-1280.jpg" 
+                        src="images/masjid-hero-light.jpg" 
                         alt="Bagotville Masjid Exterior (Light Theme)" 
                         class="light-theme-image">
                 </picture>
                 <picture>
                     <source 
-                        srcset="images/masjid-hero-dark-1280.webp 1280w, images/masjid-hero-dark-800.webp 800w" 
+                        srcset="images/masjid-hero-dark.webp 1280w, images/masjid-hero-dark-800.webp 800w" 
                         sizes="(max-width: 1280px) 100vw, 1280px" 
                         type="image/webp">
                     <source 
-                        srcset="images/masjid-hero-dark-1280.jpg 1280w, images/masjid-hero-dark-800.jpg 800w" 
+                        srcset="images/masjid-hero-dark.jpg 1280w, images/masjid-hero-dark-800.jpg 800w" 
                         sizes="(max-width: 1280px) 100vw, 1280px" 
                         type="image/jpeg">
                     <img 
-                        src="images/masjid-hero-dark-1280.jpg" 
+                        src="images/masjid-hero-dark.jpg" 
                         alt="Bagotville Masjid Exterior (Dark Theme)" 
                         class="dark-theme-image">
                 </picture>
